automation/airflow-extra/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: airflow
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      # Rule on the Host
      match: HostRegexp(`^ag\.[a-zA-Z]+\.[a-zA-Z]+\.[a-zA-Z]+$`)
      # Enable Router observability
      observability:
        accessLogs: true
        metrics: true
        tracing: true
      # Set a pirority
      priority: 10
      services:
        # Target a Kubernetes Support
        - kind: Service
          serversTransport: default
          name: airflow-web
          nativeLB: true
          # Customize the connection between Traefik and the backend
          passHostHeader: true
          port: 8080
          responseForwarding:
            flushInterval: 1ms
          scheme: http
          sticky:
            cookie:
              httpOnly: true
              name: cookie
              secure: true
          strategy: wrr
          weight: 10
  tls:
    secretName: homelab-cert
